createAddQuoteForm() function updated

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -12,7 +12,7 @@
   <div class="quote-container">
     <h2>Random Quote</h2>
     <div id="quoteDisplay"></div>
-    <button id="newQuoteBtn">Show New Quote</button>
+    <button id="newQuote">Show New Quote</button>
   </div>
 
   <div class="controls">
