--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Advanced Dynamic Quote Generator</title>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Advanced Dynamic Quote Generator</h1>
@@ -15,12 +15,7 @@
     <button id="newQuote">Show New Quote</button>
   </div>
 
-  <div class="controls">
-    <h2>Add a New Quote</h2>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
+  <!-- The form will be created dynamically by createAddQuoteForm() -->
 
   <div class="controls">
     <h2>Filter Quotes</h2>
